--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Description" content="This site is intented to help clients of Argos Consult to get help
+     with 1C products">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>1cSupportFront</title>
   </head>
