--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" charset="utf-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="Description" content="This site is intented to help clients of Argos Consult to get help
-     with 1C products">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="This site is intented to help clients of Argos Consult to get help
+     with 1C products"
+    />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="preconnect" crossorigin href="https://api.4buttons.ru" />
     <title>1cSupportFront</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but 1cSupportFront doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but 1cSupportFront doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
